--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title>URL-KEEPER</title>
   </head>
   <body>
