--- a/release-mail.html
+++ b/release-mail.html
@@ -66,6 +66,12 @@
             <li>Feature 1: Description of the new feature.</li>
             <li>Improvement 1: Description of the improvements.</li>
             <li>Fix 1: Description of the fixes.</li>
+            <li>Feature 1: Description of the new feature.</li>
+            <li>Improvement 1: Description of the improvements.</li>
+            <li>Fix 1: Description of the fixes.</li>
+            <li>Feature 1: Description of the new feature.</li>
+            <li>Improvement 1: Description of the improvements.</li>
+            <li>Fix 1: Description of the fixes.</li>
             <!-- Add more changes as needed -->
         </ul>
     </div>
