--- a/release-mail.html
+++ b/release-mail.html
@@ -27,3 +27,60 @@
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>OBB Release Announcement</title>
+</head>
+<body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4;">
+<table width="100%" bgcolor="#f4f4f4" border="0" cellpadding="0" cellspacing="0">
+    <tr>
+        <td>
+            <table width="600" align="center" bgcolor="#ffffff" cellpadding="20" cellspacing="0" style="margin:auto;">
+                <tr>
+                    <td align="center" style="color: #002E3C;">
+                        <h1>OBB SPO Release v1.2.3</h1>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="color: #002E3C;">
+                        <p>We're excited to announce the release of our latest application update. This update brings
+                            significant improvements and new features designed to enhance your experience.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <a href="YOUR_APPLICATION_LINK"
+                           style="display: inline-block; width: 60%; background-color: #FFD700; color: #002E3C; padding: 14px 20px; text-align: center; text-decoration: none; font-size: 16px; margin: 20px auto; border-radius: 15px; max-width: 360px;">Open
+                            Application</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="color: #002E3C;">
+                        <h2 style="text-align: center;">What's New:</h2>
+                        <ul>
+                            <li>Feature 1: Description of the new feature.</li>
+                            <li>Improvement 1: Description of the improvements.</li>
+                            <li>Fix 1: Description of the fixes.</li>
+                            <!-- Add more changes as needed -->
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="color: #002E3C; text-align: center; font-size: 14px;">
+                        <p>Warmly,</p>
+                        <p>The OMR Cell</p>
+                        <p>Bringing you closer to what matters most with each update.</p>
+                        <p>Got feedback? We're all ears! <a
+                                href="mailto:your.email@example.com?subject=Feedback%20on%20Application%20Release%20v1.2.3"
+                                style="color: #002E3C;">Click here to reply</a>.</p>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+</body>
+</html>
+
